# campello_image

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES  TODO.md  android.cmake  ios.cmake  linux.cmake  macos.cmake  test.sh  windows.cmake
.github/workflows/: ci.yml
inc/campello_image/: gpu_format_bridge.hpp  image.hpp  texture_data.hpp
inc/campello_image/constants/: image_format.hpp  texture_format.hpp
src/: campello_image_config.h.in  image.cpp  image_handle.hpp  texture_data.cpp  texture_data_handle.hpp
src/constants/: texture_format.cpp
tests/: CMakeLists.txt
tests/images/: test.basis  test.exr  test.hdr  test.ktx2  test.tga
tests/universal/: test_image.cpp  test_texture_data.cpp
